# agentic-reliability-platform

./: README.md
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/ark/: README.eval-gate.md  __init__.py  adapters.py  cli.py  gate.py  report.py
backend/app/ark/config_examples/: openrouter.example.json  vllm.example.json
backend/app/ark/schemas/: trace.schema.v0.json
backend/app/ark/tasks/: core25.json
backend/app/core/: config.py
backend/app/db/: models.py  session.py
backend/app/services/: schemas.py
backend/tests/: test_ark_adapters.py  test_ark_cli.py  test_ark_gate.py  test_ark_report.py  test_ark_trace_schema.py  test_mvp.py
demo/: README.md  e2e_demo.sh  expected_output_ascii.txt  run_demo.sh  sample_screenshot_mock.html
docs/: 05-concrete-use-case-coding-agent.md  06-code-design.md  07-reviewer-checklist.md
docs/ship-sprint/: README.md  issue-01-bootstrap-cli-runner.md  issue-02-core25-task-pack.md  issue-03-trace-schema-v0.md  issue-04-reliability-report-generator.md  issue-05-baseline-adapters.md  w1-day1-reliability-snapshot.md
openclaw-skill/agentic-reliability/: SKILL.md  _meta.json
