[project]
name = "agentic-reliability-mvp"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "sqlalchemy>=2.0.30",
  "pydantic>=2.8.0"
]

[project.scripts]
ark = "app.ark.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.2.0", "httpx>=0.27.0"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
